media query fixed

--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ nav ul {
   float: right;
   margin:2em 2em 0 0;
   position: fixed;
-  width: 30%;
+  width: 50%;
   height: 100%;
   background: rgba(36,41,44,1);
   top:0;
@@ -122,12 +122,13 @@ input[type=button]{
     border: none;
     color: black;
     margin-top: 1em;
-    width: 25em;
+    width: 10em;
     font-weight: 200;
     padding: 0.5em 0.5em;
     border-radius: .5em;
     cursor: pointer;
     font-size: 1em;
+    
 }
 
 .skills-bg{
@@ -171,7 +172,7 @@ footer{
 }
 
 
-@media (min-width: 730px){
+@media only screen and (min-width:730px){
     .mainintro img{
         float: left;
         margin-bottom: 0em;
