--- a/main.css
+++ b/main.css
@@ -251,17 +251,17 @@ footer{
     width: auto;
     -webkit-filter: brightness(100%);
     text-align: center;
-    max-height: 200px;
+    max-height: 100px;
 }
 
 .items img:hover {
     -webkit-filter: brightness(70%);
-    max-height: 250px;
+    max-height: 150px;
 }
 
 .items img:active{
     -webkit-filter: brightness(100%);
-    max-height: 300px;
+    max-height: 200px;
     border: solid 2px black;
     backface-visibility: hidden;
 }
@@ -353,6 +353,18 @@ footer{
       right:0;
       text-align: left;
       z-index:1;
+    }
+    
+    .items img{
+        max-height: 200px;
+    }
+
+    .items img:hover {
+        max-height: 250px;
+    }
+
+    .items img:active{
+        max-height: 300px;
     }
 
     nav li {
