--- a/main.css
+++ b/main.css
@@ -251,17 +251,17 @@ footer{
     width: auto;
     -webkit-filter: brightness(100%);
     text-align: center;
-    max-height: 100px;
+    max-height: 7em;
 }
 
 .items img:hover {
     -webkit-filter: brightness(70%);
-    max-height: 150px;
+    max-height: 10em;
 }
 
 .items img:active{
     -webkit-filter: brightness(100%);
-    max-height: 200px;
+    max-height: 14em;
     border: solid 2px black;
     backface-visibility: hidden;
 }
@@ -356,15 +356,15 @@ footer{
     }
     
     .items img{
-        max-height: 200px;
+        max-height: 10em;
     }
 
     .items img:hover {
-        max-height: 250px;
+        max-height: 13em;
     }
 
     .items img:active{
-        max-height: 300px;
+        max-height: 17em;
     }
 
     nav li {
